--- a/nginx.yaml
+++ b/nginx.yaml
@@ -6,7 +6,7 @@
     - nginx-vars.yaml
   vars_prompt:
   - name: "NAME"
-    prompt: "What is your name: "
+    prompt: "What is your name"
     private: true
   # vars:
   #   NAME: "Vinay Kumar"
@@ -28,6 +28,10 @@
   become: "yes"
   vars_files:
     - nginx-vars.yaml
+  vars_prompt:
+  - name: "NAME"
+    prompt: "What is your name"
+    private: true
   tasks: 
     - name: "starting the nginx server"
       ansible.builtin.service: 
