--- a/nginx.yaml
+++ b/nginx.yaml
@@ -7,5 +7,5 @@
     dnf:
       name: "zip"
       state: "present"
-    when: ansible_os_family == "RedHat"
+    when: ansible_os_family == "edHat"
       
