--- a/functions.yaml
+++ b/functions.yaml
@@ -1,7 +1,6 @@
 - name: "practicing functions"
   hosts: "local"
   connection: "local"
-  tasks:
-  - ansible.builtin.debug:
-      msg: " hi {{name | default('vinay')}}"
-     
+  tasks: 
+  - name: "command vs shell"
+    ansible.builtin.command: "ls -l"
