--- a/functions.yaml
+++ b/functions.yaml
@@ -1,6 +1,8 @@
-- name: "practicing functions"
-  hosts: "local"
-  connection: "local"
-  tasks: 
-  - name: "command vs shell"
-    ansible.builtin.command: "ls -l"
+- name: Install pacakges
+  hosts: local
+  connection: local
+  become: yes
+  tasks:
+  - name: print names
+    ansible.builtin.debug:
+      msg: "sdfsdfsdfsfsdfdfsdfsdfsdf"
