--- a/ec2_r53.yaml
+++ b/ec2_r53.yaml
@@ -32,7 +32,7 @@
     amazon.aws.route53:
       state: present
       zone: "{{domain}}"
-      record: "{{item.item}}.{{domain}}"
+      record: "{{domain}}"
       type: A
       ttl: 1
       value: "{{item.instances[0].public_ip_address}}"
