--- a/cart.yaml
+++ b/cart.yaml
@@ -54,7 +54,7 @@
   # unzipping the cart file
   - name: extracting the cart file into app directory
     ansible.builtin.unarchive:
-      source: /tmp/cart.zip
+      src: /tmp/cart.zip
       dest: /app
       remote_src: yes
 
