--- a/redis.yaml
+++ b/redis.yaml
@@ -27,7 +27,7 @@
   # modifying protected mode from yes to no
   - name: changing protected mode to no
     ansible.builtin.lineinfile:
-      path: 'etc/redis/redis.conf'
+      path: '/etc/redis/redis.conf'
       regexp: 'protected-mode'
       line: 'protected-mode no'
 
