--- a/cart.yaml
+++ b/cart.yaml
@@ -3,22 +3,19 @@
   become: yes
   tasks: 
 
-  # disabling default nodejs version
-  - name: disabling default nodejs
+  - name: disabling default nodejs version
     ansible.builtin.command: dnf module disable nodejs -y
 
-  # enabling the nodejs 20 version
-  - name: enabling nodejs 20
+  - name: enabling nodejs 20 version
     ansible.builtin.command: dnf module enable nodejs:20 -y
 
-  # installing nodejs
   - name: installing nodejs package
     ansible.builtin.package: 
       name: nodejs
       state: present
   
   # Creating roboshop system user
-  # idempotent unline the normal shell command
+  # idempotent unlike the normal shell command
   - name: creating roboshop system user
     ansible.builtin.user:
       name: roboshop
@@ -27,49 +24,41 @@
       shell: /sbin/nologin
       home: /app
 
-  # deleting the app directory
   - name: deleting the app directory
     ansible.builtin.file:
       path: /app
       state: absent
   
-  # creating the app directory
   - name: creating the app directory
     ansible.builtin.file:
       path: /app
       state: directory
   
-  # deleting cart code file in tmp directory
-  - name: deleting the cart code file in tmp directory
+  - name: deleting the app code file in tmp directory
     ansible.builtin.file:
       path: /tmp/cart.zip
       state: absent
 
-  # downloading cart application
   - name: downloading cart application
     ansible.builtin.get_url:
       url: https://roboshop-artifacts.s3.amazonaws.com/cart-v3.zip
       dest: /tmp/cart.zip
 
-  # unzipping the cart file
-  - name: extracting the cart file into app directory
+  - name: unzipping cart application
     ansible.builtin.unarchive:
       src: /tmp/cart.zip
       dest: /app
       remote_src: yes
 
-  # installing the dependencies
   - name: installing the dependencies
     community.general.npm: 
       path: /app
 
-  # copying cart service file into /etc/systemd/system/cart.service
   - name: copying cart service file
     ansible.builtin.copy:
       src: ./cart.service
       dest: /etc/systemd/system/cart.service
 
-  # daemon reload, enabling service and startin it
   - name: daemon reload enable and start
     ansible.builtin.systemd_service:
       name: cart
