--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -3,15 +3,12 @@
   become: yes
   tasks:
 
-  # disabling default nodejs version
-  - name: disabling default nodejs
+  - name: disabling default nodejs version
     ansible.builtin.command: dnf module disable nodejs -y
 
-  # enabling the nodejs 20 version
-  - name: enabling nodejs 20
+  - name: enabling nodejs 20 version
     ansible.builtin.command: dnf module enable nodejs:20 -y
 
-  # installing nodejs
   - name: installing nodejs package
     ansible.builtin.package: 
       name: nodejs
@@ -27,71 +24,59 @@
       shell: /sbin/nologin
       home: /app
 
-  # deleting the app directory
   - name: deleting the app directory
     ansible.builtin.file:
       path: /app
       state: absent
   
-  # creating the app directory
   - name: creating the app directory
     ansible.builtin.file:
       path: /app
       state: directory
   
-  # deleting catalogue code file in tmp directory
   - name: deleting the catalogue code file in tmp directory
     ansible.builtin.file:
       path: /tmp/catalogue.zip
       state: absent
 
-  # downloading catalogue application
   - name: downloading catalogue application
     ansible.builtin.get_url:
       url: https://roboshop-artifacts.s3.amazonaws.com/catalogue-v3.zip
       dest: /tmp/catalogue.zip
 
-  # unzipping the catalogue file
-  - name: extracting the catalogue file into app directory
+  - name: unzipping catalogue application
     ansible.builtin.unarchive:
       src: /tmp/catalogue.zip
       dest: /app
       remote_src: yes
 
-  # installing the dependencies
   - name: installing the dependencies
     community.general.npm: 
       path: /app
 
-  # copying catalogue service file into /etc/systemd/system/catalogue.service
   - name: copying catalogue service file
     ansible.builtin.copy:
       src: ./catalogue.service
       dest: /etc/systemd/system/catalogue.service
 
-  # copying mongo.repo file to /etc/yum.repos.d
   - name: copying mongo repo file
     ansible.builtin.copy:
       src: ./mongo.repo
       dest: /etc/yum.repos.d
 
-  # installing mongodb client
   - name: installing monosh (mongodb client)
     ansible.builtin.package:
       name: mongodb-mongosh
       state: present
   
-  # checking if the data is already loaded
   - name: connnect to mongodb catalogue
     ansible.builtin.command: mongosh mongodb.bloombear.fun --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
     register: catalogue_output
   
-  # load the data if not present
   - name: loading the catalogue products data into the mongodb server
     ansible.builtin.shell: mongosh --host mongodb.bloombear.fun </app/db/master-data.js
     when: catalogue_output.stdout | int < 0
 
-  # daemon reload, enabling service and startin it
   - name: daemon reload enable and start
     ansible.builtin.systemd_service:
       name: catalogue
